# flykeep

./: .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
docs/superpowers/plans/: 2026-04-09-flykeep-implementation.md  2026-04-09-read-token-implementation.md  2026-04-10-enforce-4-segment-paths.md
docs/superpowers/specs/: 2026-04-09-flykeep-design.md  2026-04-09-read-token-design.md  2026-04-10-enforce-4-segment-paths-design.md  2026-04-10-multi-user-service-accounts-design.md
flykeep-cli/: Cargo.toml
flykeep-cli/src/: client.rs  config.rs  main.rs
flykeep-server/: Cargo.toml  Dockerfile  fly.toml
flykeep-server/src/: auth.rs  crypto.rs  db.rs  main.rs  routes.rs
