[package]
name = "flykeep-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "flykeep"
path = "src/main.rs"

[dependencies]
reqwest = { version = "0.12", features = ["rustls-tls", "json"], default-features = false }
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
comfy-table = "7"
chrono = "0.4"
dotenvy = "0.15"

[dev-dependencies]
wiremock = "0.6"
tempfile = "3"
