[package]
name = "flykeep-server"
version = "0.1.0"
edition = "2021"

[dependencies]
salvo = { version = "0.77", features = ["test"] }
tokio = { version = "1", features = ["full"] }
rusqlite = { version = "0.32", features = ["bundled"] }
aes-gcm = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dotenvy = "0.15"
hex = "0.4"
rand = "0.8"

[dev-dependencies]
tempfile = "3"
